--- a/styles/global.scss
+++ b/styles/global.scss
@@ -27,6 +27,15 @@
     font-weight: 600;
     margin: $xl-6 0;
   }
+  @media only screen and (max-width: 1100px) {
+    .hero-title {
+      font-size: 70px; 
+      line-height: 100px;
+      margin: $xl-6 0;
+
+   
+    }
+  }
   @media only screen and (max-width: 600px) {
     .hero-title {
       font-size: 70px; 
@@ -111,7 +120,11 @@
     @include flex(center, space-between, none);
   }
 }
-
+.text{
+  text-align: center;
+  margin-left: 7%;
+  margin-top: -60px;
+}
 //testimonial
 .testimonial {
   .card {
@@ -205,7 +218,9 @@ footer {
     font-size: 4em;
     
   }
-  @media only screen and (max-width: 600px){
+ 
+    
+    @media only screen and (max-width: 600px){
     .logobg{
       font-size: 30px;
     }
@@ -368,9 +383,14 @@ footer {
 .post-details {
   .heading-title {
     .desc {
-      text-align: center;
+      text-align: left;
     }
   }
+}
+.heading-title p{
+  text-align: center;
+
+
 }
 .title{
   text-align: center;
